# dia_test_harness_gemini_enterprise

./: .env.example  .gitignore  =0.13.0  CLAUDE.md  COMPREHENSIVE_CONFIG_OPTIMIZATION.md  EVALUATION_IMPLEMENTATION_SUMMARY.md  GENERATED_SQL_ISSUE.md  OPRO_IMPLEMENTATION_SUMMARY.md  PARALLEL_OPTIMIZATION_SUMMARY.md  README.md  README_UPDATES.md  main.py  pyproject.toml  results.json  test_agent_response.py  test_sql_extraction.py  test_sql_extraction_results.json  test_visualizer.py
configs/: baseline_config.json  multi_variant.json  nl2sql_prompt.md  sample_configs.json  schema_description.md  tool_description.md
data/: customers.json  debug_set.json  golden_set.csv  golden_set.json  order_items.json  orders.json  products.json  test_set.csv
docs/: AUTHORIZATION_GUIDE.md
results/: EVALUATION_SUMMARY.md  OPTIMIZATION_REPORT_20260108_045612.md  authorization_1.txt  eval_iteration_1.jsonl  eval_test_20260108_032404.jsonl.repeat1  eval_test_20260108_032404.jsonl.repeat2  eval_test_20260108_044636.jsonl.repeat1  eval_test_20260108_044636.jsonl.repeat2  eval_test_20260108_193548.jsonl.repeat1  eval_test_20260108_193548.jsonl.repeat2  eval_train_20260108_032404.jsonl.repeat1  eval_train_20260108_032404.jsonl.repeat2  eval_train_20260108_044636.jsonl.repeat1  eval_train_20260108_044636.jsonl.repeat2  eval_train_20260108_193548.jsonl.repeat1  eval_train_20260108_193548.jsonl.repeat2  golden_test_results.jsonl  prompt_improvement_recommendations.txt  test_evaluation_results.jsonl  trajectory_history.json  trajectory_history_20260108_032404.json  (+1 more)
scripts/: authorize_agent.py  (+32 more)
(+25 files in other folders)
